# meetup-generator-rs

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md  fly.toml
.github/workflows/: test.yml
resources/: all_the_things.toml
src/: main.rs
src/utils/: loader.rs  meetup_generator.rs  mod.rs  spec_helper.rs  string.rs  talk_generator.rs  types.rs
static/: main.css
templates/: index.html.tera
tests/resources/: test_things.toml
