[package]
name = "meetup-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket =  { version = "0.5", features = ["json"] }
regex = "1"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8.5"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
tera = "1.20.0"


