[package]
name = "meetup-generator"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
flate2 = "1.0"
rand = "0.9"
regex = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.20"
time = { version = "0.3", features = ["formatting", "macros"] }
toml = "0.9"

[dev-dependencies]
scraper = "0.22"
